--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">project_name</string>
 
     <string name="please_wait">Please wait.</string>
+    <string name="example_server">54.234.249.244</string>
+    <string name="proceed">Proceed</string>
+    <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
 </resources>
