Add teams fetching

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="proceed">Proceed</string>
     <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
     <string name="invalid_server_url">Please enter valid server address</string>
+    <string name="no_teams_received">Could not receive teams</string>
     <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
     <string name="email">Email</string>
     <string name="authorize">Authorize</string>
     <string name="password">Password</string>
-    <string name="default_server_text">54.234.249.244/applikeyteam</string>
+    <string name="default_server_text">54.234.249.244</string>
     <string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>
 </resources>
