--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="password">Password</string>
     <string name="default_server_text">54.234.249.244</string>
     <string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>
+    <string name="unknown">UNKNOWN</string>
 </resources>
