--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="please_wait">Please wait.</string>
     <string name="example_server">127.0.0.1:8065</string>
     <string name="proceed">Proceed</string>
-    <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
+    <string name="welcome_to_mattermost">Welcome to Mattermost</string>
     <string name="invalid_server_url">Please enter valid server address</string>
     <string name="no_teams_received">Could not receive teams</string>
     <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
@@ -14,4 +14,6 @@
     <string name="default_server_text">54.234.249.244</string>
     <string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>
     <string name="unknown">UNKNOWN</string>
+    <string name="all_your_team_communication">All your team communication in one\nplace, searchable and accessible\nanywhere.</string>
+    <string name="enter_server_url_capt">ENTER SERVER URL</string>
 </resources>
