--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="please_wait">Please wait.</string>
     <string name="example_server">127.0.0.1:8065</string>
-    <string name="proceed">Proceed</string>
+    <string name="next">Next</string>
     <string name="welcome_to_mattermost">Welcome to Mattermost</string>
     <string name="invalid_server_url">Please enter valid server address</string>
     <string name="no_teams_received">Could not receive teams</string>
