--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="content_descr_back">Back</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="forgot_password_capt">FORGOT PASSWORD</string>
+    <string name="restore_password_capt">RESTORE PASSWORD</string>
 </resources>
