--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="enter_your_password">Enter your password</string>
     <string name="forgot_password_capt">FORGOT PASSWORD</string>
     <string name="restore_password_capt">RESTORE PASSWORD</string>
+
+    <string name="could_not_receive_teams">Could not receive teams</string>
 </resources>
