Apply UI changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="unknown">UNKNOWN</string>
     <string name="default_password">zxD123</string>
     <string name="all_your_team_communication">All your team communication in one\nplace, searchable and accessible\nanywhere.</string>
-    <string name="enter_server_url_capt">ENTE R SERVER URL</string>
-    <string name="your_team_capt">YOUR TEAM</string>
+    <string name="enter_server_url_capt">ENTER SERVER URL</string>
+    <string name="your_team_capt">Select your team</string>
     <string name="email_capt">EMAIL</string>
     <string name="password_capt">PASSWORD</string>
     <string name="content_descr_back">Back</string>
