--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Mattermost Native Client</string>
 
     <string name="please_wait">Please wait.</string>
-    <string name="example_server">127.0.0.1:8065</string>
+    <string name="example_server">54.234.249.244</string>
+    <!--<string name="example_server">127.0.0.1:8065</string>-->
+    <string name="proceed">Proceed</string>
+    <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
     <string name="next">Next</string>
     <string name="welcome_to_mattermost">Welcome to Mattermost</string>
     <string name="invalid_server_url">Please enter valid server address</string>
@@ -11,7 +14,8 @@
     <string name="email">Email</string>
     <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
-    <string name="default_server_text">192.168.42.115:8065</string>
+    <string name="default_server_text">54.234.249.244</string>
+    <!--<string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>-->
     <!--<string name="default_server_text">54.234.249.244</string>-->
     <string name="default_login_text">tester</string>
     <!--<string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>-->
