--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="restore_password_capt">RESTORE PASSWORD</string>
 
     <string name="could_not_receive_teams">Could not receive teams</string>
+    <string name="example_message_preview">Message Preview will be displayed here</string>
 </resources>
