Revert value changing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="unknown">UNKNOWN</string>
     <string name="all_your_team_communication">All your team communication in one\nplace, searchable and accessible\nanywhere.</string>
     <string name="enter_server_url_capt">ENTER SERVER URL</string>
-    <string name="your_team">Your team</string>
+    <string name="your_team">Select your team</string>
     <string name="email_capt">EMAIL</string>
     <string name="password_capt">PASSWORD</string>
     <string name="content_descr_back">Back</string>
