Add status indicators resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,11 +32,12 @@
     <string name="no_direct_chats_available">No Direct Chats Available</string>
 
 
-    <string name="default_server_text">192.168.42.115:8065</string>
-    <!--<string name="default_server_text"></string>-->
+    <string name="default_server_text">192.168.0.100:8065</string>
+    <!--<string name="default_server_text">192.168.42.115:8065</string>-->
+    <!--<string name="default_server_text" />-->
     <string name="default_login_text">tester</string>
-    <!--<string name="default_login_text"></string>-->
+    <!--<string name="default_login_text" />-->
     <string name="default_password">zxD123</string>
-    <!--<string name="default_password"></string>-->
+    <!--<string name="default_password" />-->
 
 </resources>
