Add unreads page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="no_channels_available">No Channels Available</string>
     <string name="no_groups_available">No Groups Available</string>
     <string name="no_direct_chats_available">No Direct Chats Available</string>
+    <string name="no_unread_chats_available">No Unread Messages</string>
 
     <string name="action_search">Search</string>
 
