--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,15 +34,12 @@
 
     <string name="action_search">Search</string>
 
-    <!--<string name="default_server_text">192.168.0.100:8065</string>-->
-    <!--<string name="default_server_text">192.168.42.115:8065</string>-->
-    <!--<string name="default_server_text">54.234.249.244</string>-->
     <string name="default_server_text" />
-    <!--<string name="default_login_text">mikhail.mikhaylov@applikeysolutions.com</string>-->
-    <!--<string name="default_login_text">tester</string>-->
     <string name="default_login_text" />
     <string name="default_password" />
+
     <string name="message">Message…</string>
+    <string name="loading">Loading…</string>
     <string name="no_posts_to_display">No Posts to Display :(</string>
 
 </resources>
