--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,16 @@
 
     <string name="action_search">Search</string>
 
-    <string name="default_server_text" />
-    <string name="default_login_text" />
-    <string name="default_password" />
+    <string name="default_server_text"/>
+    <string name="default_login_text"/>
+    <string name="default_password"/>
 
     <string name="message">Message…</string>
     <string name="loading">Loading…</string>
     <string name="no_posts_to_display">No Posts to Display :(</string>
+
+    <array name="post_own_opinion_array">
+        <item>Delete</item>
+    </array>
 
 </resources>
