--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,11 @@
     <string name="loading">Loading…</string>
     <string name="no_posts_to_display">No Posts to Display :(</string>
 
+    <string name="start_new_direct_chat">Start new direct chat</string>
+    <string name="create_channel">Create Channel</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
+
     <array name="post_own_opinion_array">
         <item>Delete</item>
         <item>Edit</item>
