--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
 
+    <string name="channel_post_author_name_format">%s:\u0020</string>
+
     <array name="post_own_opinion_array">
         <item>Delete</item>
         <item>Edit</item>
