--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,13 @@
     <string name="create_channel">Create Channel</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="create_channel_hint_name">Name</string>
+    <string name="private_channel">Private</string>
+    <string name="public_channel">Public</string>
+    <string name="channel_description_channel_hint">Description</string>
+    <string name="search_people_for_channel_hint">Search</string>
+    <string name="added_people_count">Add People (%1$d added)</string>
+    <string name="button_add_all">Add all</string>
 
     <array name="post_own_opinion_array">
         <item>Delete</item>
