add title for activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,9 @@
     <string name="search_people_for_channel_hint">Search</string>
     <string name="added_people_count">+%1$d</string>
     <string name="button_add_all">Add all</string>
+    <string name="action_create_channel">Create channel</string>
+    <string name="new_public_channel">New public channel</string>
+    <string name="new_private_group">New private group</string>
 
     <array name="post_own_opinion_array">
         <item>Delete</item>
