--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="action_create_channel">Create channel</string>
     <string name="new_public_channel">New public channel</string>
     <string name="new_private_group">New private group</string>
+    <string name="error_channel_name_empty">Channel name cannot be empty</string>
 
     <array name="post_own_opinion_array">
         <item>Delete</item>
