Fix chat screen design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="logout">Logout</string>
 
     <string name="channel_post_author_name_format">%s:\u0020</string>
+    <string name="you">You</string>
 
     <array name="post_own_opinion_array">
         <item>Delete</item>
