--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="create_chat_hint_name">Example: Project Name, Bugs, Sales</string>
     <string name="create_channel_description_hint">What are you going to discuss\n in this group</string>
     <string name="added_members_title">Added members</string>
+    <string name="settings_unread_tabs_content">Enable unread tabs</string>
+    <string name="settings_unread_tabs_title">Unread tabs</string>
 
     <array name="post_own_opinion_array">
         <item>Delete</item>
