--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,5 +89,6 @@
     <string name="make_favorite">Make favorite</string>
     <string name="edit_profile">Edit profile</string>
     <string name="unread_messages">Unread messages</string>
+    <string name="add_members">Add members</string>
 
 </resources>
