--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,6 @@
     <string name="edit_profile">Edit profile</string>
     <string name="unread_messages">Unread messages</string>
     <string name="add_members">Add members</string>
+    <string name="button_clear">Cancel</string>
 
 </resources>
