--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     </array>
 
     <string name="gcm_sender_id">400589284558</string>
-    <string name="activity.search.chat.search">Search...</string>
+    <string name="search_with_ellipsis">Search...</string>
     <string name="new_group_or_channel">New group or channel</string>
     <string name="invite_new_member">Invite new member</string>
     <string name="all_channels">All channels</string>
