--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
 
     <string name="edit_message">Edit Message</string>
     <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="delete">Delete</string>
     <string name="save">Save</string>
 
     <string name="could_not_receive_teams">Could not receive teams</string>
@@ -67,6 +69,8 @@
     <string name="new_public_channel">New public channel</string>
     <string name="new_private_group">New private group</string>
     <string name="error_channel_name_empty">Channel name cannot be empty</string>
+    <string name="post_delete">Post Delete</string>
+    <string name="are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
 
     <string name="channel_post_author_name_format">%s:\u0020</string>
     <string name="you">You</string>
