--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="message">Message…</string>
     <string name="loading">Loading…</string>
     <string name="no_posts_to_display">No Posts to Display :(</string>
+    <string name="no_users_to_display">No Users to Display :(</string>
     <string name="channel_preview_message_placeholder">No messages yet</string>
 
     <string name="start_new_direct_chat">Start new direct chat</string>
