--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="no_favorite_chats_available">No Favorite Chats Available</string>
 
     <string name="action_search">Search</string>
+    <string name="action_apply">Apply</string>
 
     <string name="default_server_text" />
     <string name="default_login_text" />
@@ -61,6 +62,7 @@
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
     <string name="create_channel_title_name">Name</string>
+    <string name="username">Username</string>
     <string name="private_channel">Private</string>
     <string name="public_channel">Public</string>
     <string name="create_channel_description_title">Purpose</string>
