implement getting not joined public channels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,7 @@
     <string name="find_more_channels">Find more channels</string>
     <string name="quantity_one_member">%d member</string>
     <string name="quantity_many_members">%d members</string>
+    <string name="public_channel_name">#%s</string>
 
 
 </resources>
