delete channel added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="added_people_count" translatable="false">+%1$d</string>
     <string name="button_add_all">Add all</string>
     <string name="action_create_channel">Create channel</string>
+    <string name="action_delete_channel">Delete channel</string>
     <string name="new_public_channel">New public channel</string>
     <string name="new_private_group">New private group</string>
     <string name="post_delete">Post Delete</string>
