Changed Restore Password to Forgot password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,7 @@
     <string name="password_capt">PASSWORD</string>
     <string name="content_descr_back">Back</string>
     <string name="enter_your_password">Enter your password</string>
-    <string name="forgot_password_capt">FORGOT PASSWORD</string>
-    <string name="restore_password_capt">RESTORE PASSWORD</string>
+    <string name="forgot_password">Forgot Password</string>
     <string name="reply">Reply</string>
     <string name="new_message_received">New message received"</string>
 
