--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="message">Message…</string>
     <string name="loading">Loading…</string>
     <string name="no_messages_here_yet">No messages here yet</string>
-    <string name="no_users_to_display">No Users to Display :(</string>
+    <string name="no_users_to_display">No users found</string>
     <string name="channel_preview_message_placeholder">No messages yet</string>
 
     <string name="start_new_direct_chat">Start new direct chat</string>
@@ -133,7 +133,7 @@
     <string name="direct_message">Direct message</string>
     <string name="unknown_error">Something is wrong</string>
     <string name="empty_state">No results found. Try again?</string>
-    <string name="search_user_empty_state">This user could not be found</string>
+    <string name="search_user_empty_state">No users found</string>
     <string name="find_more_channels">Find more channels</string>
     <string name="quantity_one_member">%d member</string>
     <string name="quantity_many_members">%d members</string>
