fail indicator implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,11 @@
         <item>Reply</item>
     </array>
 
+    <array name="post_own_opinion_fail_array">
+        <item>Retry</item>
+        <item>Delete</item>
+    </array>
+
     <array name="post_opinion_array">
         <item>Reply</item>
     </array>
