--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,7 @@
     <string name="are_you_sure_want_to_leave_channel">Are you sure you want to delete this message?</string>
     <string name="message_delete_title">Message Delete</string>
 
+    <string name="url">url</string>
+
 
 </resources>
