--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="message_details">Message details</string>
     <string name="are_you_sure_want_to_leave_channel">Are you sure you want to delete this message?</string>
     <string name="message_delete_title">Message Delete</string>
+    <string name="error_user_invited">User already invited</string>
 
 
 </resources>
