--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,6 @@
     <string name="error_user_invited">User already invited</string>
 
     <string name="url">url</string>
-
+    <string name="attachment">Attachment</string>
 
 </resources>
