Implement downloading attachments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,6 @@
     <string name="url">url</string>
     <string name="attachment">Attachment</string>
 
+    <string name="please_grant_permission">Please grant the permission</string>
+
 </resources>
